@@ -14,6 +14,9 @@ import sn.uasz.gestion_reservation_uasz.repositories.PretRepository;
 import sn.uasz.gestion_reservation_uasz.repositories.ReservationRepository;
 import sn.uasz.gestion_reservation_uasz.repositories.RessourceRepository;
 
+/**
+ * Service pour la gestion des prêts.
+ */
 @Slf4j
 @Service
 @Transactional
@@ -27,46 +30,65 @@ public class PretService {
     @Autowired
     private ReservationRepository reservationRepository;
 
+    /**
+     * Crée un nouveau prêt.
+     * 
+     * @param p Prêt à créer
+     * @return Le prêt créé
+     */
     public Pret creerPret(Pret p) {
         Ressource r = p.getRessource();
         Long rID = r.getIdRessource();
         Ressource existingRessource = ressourceRepository.findById(rID).orElse(null);
-    
+
         if (existingRessource != null) {
             // Vérifier si la ressource est réservée à la date prévue
-            List<Reservation> reservations = reservationRepository.findByRessourceDatePrevueAndHeureDebut(existingRessource, p.getDatePret(), p.getHeureDebutPret());
+            List<Reservation> reservations = reservationRepository
+                    .findByRessourceDatePrevueAndHeureDebut(existingRessource, p.getDatePret(), p.getHeureDebutPret());
             if (!reservations.isEmpty()) {
-                
                 existingRessource.setEtat("En Pret");
                 ressourceRepository.save(existingRessource);
                 p.setRessource(existingRessource);
-                p.setDuree(reservations.getFirst().getHeureFin() - reservations.getFirst().getHeureDebut());
-                log.info("Le Pret de la ressource " + existingRessource.getIdRessource() + " est effectif");
+                p.setDuree(reservations.get(0).getHeureFin() - reservations.get(0).getHeureDebut());
+                log.info("Le Prêt de la ressource " + existingRessource.getIdRessource() + " est effectif");
                 return pRepository.save(p);
             }
-            
-            log.info("La ressource " + existingRessource.getIdRessource() + " n'est réservée à la date prévue pour le prêt.");
+
+            log.info("La ressource " + existingRessource.getIdRessource()
+                    + " n'est pas réservée à la date prévue pour le prêt.");
             return null;
-          
+
         } else {
             log.error("La ressource " + rID + " n'existe pas.");
             return null;
         }
     }
-    
 
-
-    public Pret rechercherPret(Long id){
-        return pRepository.findById(id).get();
+    /**
+     * Recherche un prêt par son identifiant.
+     * 
+     * @param id Identifiant du prêt
+     * @return Le prêt trouvé
+     */
+    public Pret rechercherPret(Long id) {
+        return pRepository.findById(id).orElse(null);
     }
 
-    public List<Pret> listePrets(){
+    /**
+     * Récupère la liste de tous les prêts.
+     * 
+     * @return Liste des prêts
+     */
+    public List<Pret> listePrets() {
         return pRepository.findAll();
     }
 
-    public void supprimerPret(Long id){
+    /**
+     * Supprime un prêt par son identifiant.
+     * 
+     * @param id Identifiant du prêt à supprimer
+     */
+    public void supprimerPret(Long id) {
         pRepository.deleteById(id);
     }
-    
-    
 }
